fixtures/valid/monorepo-package-import/packages/app/src/public.ts
import { coreValue } from "@example/core";

export const appValue = `${coreValue}:app`;
