fixtures/invalid/public-surface-line-growth/src/core/public.ts
const prefix = "core";
const suffix = "value";
export const coreValue = `${prefix}-${suffix}`;
